修改了注册函数、生成名片的方法、添加了我的集体条目触发等等

--- a/views/index.html
+++ b/views/index.html
@@ -60,7 +60,7 @@
             <i class="item-icon"></i>
             <span class="">我的集体</span>
           </li>
-          <li class="item forward" title="我的通讯录中的联系人">
+          <li id="all-groups" class="item forward" title="我的通讯录中的联系人">
             <i class="item-icon"></i>
             <span class="">所有集体</span>
           </li>
