--- a/views/index.html
+++ b/views/index.html
@@ -56,7 +56,7 @@
             <i class="item-icon"></i>
             <span class="">创建集体</span>
           </li>
-          <li class="item forward" title="新增加的联系人，添加标签以后归档">
+          <li id="my-collective" class="item forward" title="新增加的联系人，添加标签以后归档">
             <i class="item-icon"></i>
             <span class="">我的集体</span>
           </li>
@@ -159,8 +159,21 @@
       <div id="contact-panel" class="clearfix">
       </div>
     </div>
+    <div id="collective-men">
+      <div class="toolbar">
+        <div id="add-collective" class="btn homeImg" title="增加成员">
+          <!--<input type="text" id="autocomplete">-->
+        </div>
+        <div id="remove-collective" class="btn homeImg" title="删除成员">
+        </div>
+      </div>
+      <div id="collective-panel" class="clearfix">
+      </div>
+    </div>
   </div>
 </div>
+
+
 
 <!-- 对话框：修改个人信息 -->
 <div id="account-edit-dialog" title="<%=account.name%>的个人信息" style="display: none">
