--- a/views/index.html
+++ b/views/index.html
@@ -60,44 +60,12 @@
             <i class="item-icon"></i>
             <span class="">我的集体</span>
           </li>
-          <li class="item forward" title="我的通讯录中的联系人">
+          <li id="all-groups" class="item forward" title="我的通讯录中的联系人">
             <i class="item-icon"></i>
             <span class="">所有集体</span>
           </li>
         </ul>
       </div>
-      <!--<div class="sep"></div>-->
-      <!--<div class="group">-->
-      <!--<h3>联系人分组</h3>-->
-      <!--<ul>-->
-      <!--<li class="item">-->
-      <!--<i class="item-icon"></i>-->
-      <!--<span class="">家人</span>-->
-      <!--</li>-->
-      <!--<li class="item">-->
-      <!--<i class="item-icon"></i>-->
-      <!--<span class="">同事</span>-->
-      <!--</li>-->
-      <!--<li class="item">-->
-      <!--<i class="item-icon"></i>-->
-      <!--<span class="">同学</span>-->
-      <!--</li>-->
-      <!--</ul>-->
-      <!--</div>-->
-      <!--<div class="sep"></div>-->
-      <!--<div class="group">-->
-      <!--<h3>备份还原</h3>-->
-      <!--<ul>-->
-      <!--<li class="item">-->
-      <!--<i class="item-icon"></i>-->
-      <!--<span class="">备份</span>-->
-      <!--</li>-->
-      <!--<li class="item">-->
-      <!--<i class="item-icon"></i>-->
-      <!--<span class="">还原</span>-->
-      <!--</li>-->
-      <!--</ul>-->
-      <!--</div>-->
       <div class="sep"></div>
       <div class="group">
         <h3>过滤</h3>
@@ -154,6 +122,8 @@
         <div id="add-contact" class="btn homeImg" title="添加选中的联系人">
         </div>
         <div id="remove-contact" class="btn homeImg" title="删除选中的联系人">
+        </div>
+        <div id="file-contact" class="btn homeImg" title="归档选中的联系人">
         </div>
       </div>
       <div id="contact-panel" class="clearfix">
