--- a/views/index.html
+++ b/views/index.html
@@ -70,11 +70,11 @@
       <div class="group">
         <h3>过滤</h3>
         <ul>
-          <li class="item forward" title="我的通讯录上没有的，但是我存在他们的通讯录中">
+          <li id="stranger" class="item forward" title="我的通讯录上没有的，但是我存在他们的通讯录中">
             <i class="item-icon"></i>
             <span class="">陌生人</span>
           </li>
-          <li class="item forward">
+          <li id="blacklist" class="item forward">
             <i class="item-icon"></i>
             <span class="">黑名单</span>
           </li>
@@ -100,7 +100,7 @@
             <i class="item-icon"></i>
             <span class="">修改密码</span>
           </li>
-          <li class="item">
+          <li id="backup" class="item">
             <i class="item-icon"></i>
             <span class="">备份</span>
           </li>
