搜索没有问题啦

--- a/views/index.html
+++ b/views/index.html
@@ -129,7 +129,7 @@
       <div id="contact-panel" class="clearfix">
       </div>
     </div>
-    <div id="collective-men">
+    <div id="collective-men" class="tab">
       <div class="toolbar">
         <div id="add-collective" class="btn homeImg" title="增加成员">
           <!--<input type="text" id="autocomplete">-->
