--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
             <i class="item-icon"></i>
             <span class="">陌生人</span>
           </li>
-          <li id="blacklist" class="item forward">
+          <li id="black-list" class="item forward">
             <i class="item-icon"></i>
             <span class="">黑名单</span>
           </li>
@@ -142,7 +142,6 @@
     </div>
   </div>
 </div>
-
 
 
 <!-- 对话框：修改个人信息 -->
@@ -261,6 +260,9 @@
     <label style="display: block;">
       标签：<input type="text" placeholder="多个标签用“,”分割开" class="form-input password-change-input" id=""
                 name="tag"/></label>
+    <label style="display: block;" id="forbid-change">
+     <input type="checkbox" class="form-input checkbox" id="forbid" name="forbid"
+       style = "width: 18px;"/>将其拉为黑名单?</label>
   </form>
 </div>
 
