--- a/views/index.html
+++ b/views/index.html
@@ -129,7 +129,7 @@
       <div id="contact-panel" class="clearfix">
       </div>
     </div>
-    <div id="collective-men">
+    <div id="collective-men" class="tab">
       <div class="toolbar">
         <div id="add-collective" class="btn homeImg" title="增加成员">
           <!--<input type="text" id="autocomplete">-->
@@ -262,7 +262,7 @@
                 name="tag"/></label>
     <label style="display: block;" id="forbid-change">
      <input type="checkbox" class="form-input checkbox" id="forbid" name="forbid"
-       style = "width: 18px;"/>将其拉为黑名单?</label>
+       style = "width: 18px;"/>黑名单</label>
   </form>
 </div>
 
